etk_includedir = $(top_srcdir)/include/etk

ACLOCAL_AMFLAGS=-I m4

pkginclude_HEADERS = \
		     $(etk_includedir)/common.h \
		     $(etk_includedir)/bitops.h \
		     $(etk_includedir)/string.h \
		     $(etk_includedir)/alloc.h \
		     $(etk_includedir)/io.h \
		     $(etk_includedir)/socket.h \
		     $(etk_includedir)/exec.h \
		     $(etk_includedir)/vt102.h \
		     $(etk_includedir)/log.h \
		     $(etk_includedir)/seq_file.h \
		     $(etk_includedir)/net.h \
		     $(etk_includedir)/list.h \
		     $(etk_includedir)/linux.h \
		     $(etk_includedir)/wrapper.h \
		     $(etk_includedir)/mme.h \
		     $(etk_includedir)/xdev.h \
		     $(etk_includedir)/dict.h \
		     $(etk_includedir)/http.h \
		     $(etk_includedir)/fifo.h

SUBDIRS = src
